# interactive-process-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  README.zh.md  go.mod  go.sum  pyproject.toml
.github/workflows/: release.yml
cmd/server/: main.go
docs/: architecture-diagram-20260427120000.html  architecture.zh.md  session-lifecycle-20260427120000.html  workflow-sequence-20260427120000.html
docs/superpowers/plans/: 2026-04-27-interactive-process-mcp.md
docs/superpowers/specs/: 2026-04-27-interactive-process-mcp-design.md  2026-05-02-multi-reader-ring-buffer-design.md
internal/ansi/: compact.go
internal/buffer/: buffer.go  buffer_test.go
internal/config/: config.go  config_test.go
internal/mcp/: handlers.go  handlers_test.go  server.go
internal/message/: message.go  message_test.go
internal/session/: manager.go  session.go  session_race_test.go  session_test.go  sftp_test.go
internal/sshclient/: client.go  client_test.go
internal/sshserver/: server.go  server_test.go
internal/storage/: store.go  store_test.go
pkg/api/: types.go
src/interactive_process_mcp/: __init__.py  __main__.py  ansi.py  buffer.py  server.py  session.py  session_manager.py  tools.py
tests/: test_ansi.py  test_buffer.py  test_session.py  test_session_manager.py  test_tools.py
